-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.6.1
-
None
-
Debian jessie (stable) x64
Gnome desktop
Nautilus (gnome), or dolphin(KDE) as source of the drag and drop operation
-
ea0c23771c8d442eec1f18039a16ce980d2fe54d (4.0, 21.3.2016)
Reproduce:
- Create a new Qt Widgets Application.
- Open the .ui file which is created in the project (in Design Mode)
- Drag and Drop a .js file (e.g. test.js) on the widget.
The content of the file does not matter, can be empty. - Qt creator will crash
Versions:
I was able to reproduce the crash with:
QtCreator 3.6.1 ,part of the Qt 5.6 SDK
QtCreator 3.2.1, part of my system Qt installation (5.3.2)
| For Gerrit Dashboard: QTCREATORBUG-15903 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 153502,2 | DocumentManager::setCurrentDesignDocument(): Check m_currentDesignDocument. | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |