DocumentManager::setCurrentDesignDocument(): Check m_currentDesignDocument.

Fix a crash occurring when dropping a .js file onto the Widget Designer.

Task-number: QTCREATORBUG-15903
Change-Id: I3e952df1483c5683fa7daa3a1f2fb8ebbbc1b491
Reviewed-by: Tim Jenssen <tim.jenssen@theqtcompany.com>